tests/traci/get_variable/ArealDetector/errors/UnsupportedVariable/testclient_out.traci
TraCITestClient output file. Date: Wed Aug 01 11:34:53 2018


-> Command sent: <SimulationStep>:
.. Command acknowledged (2), [description: ]

-> Command sent: <GetVariable>:
  domID=173 varID=255 objID=dummy
.. Answered with error to command (173), [description: Get Lane Area Detector Variable: unsupported variable 0xff specified]

-> Command sent: <SimulationStep>:
.. Command acknowledged (2), [description: ]

-> Command sent: <Close>:
.. Command acknowledged (127), [description: ]
